# dredge

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug.md
.github/workflows/: ci.yml  publish.yml
docs/reviews/2026-07-21-deliberate/: 0-anthropic-fable.md  1-openai-gpt-5_6-sol.md  2-google-gemini-3_5-flash.md  manifest.json  synthesis.md
examples/: openwiki-prompt.txt  openwiki.toml
src/dredge/: __init__.py  cli.py  config.py  engine.py
tests/: test_cli.py  test_config.py  test_engine.py
