[project]
name = "dredge"
version = "0.1.0"
description = "Coverage-guaranteed batch sweeps of an AI agent over a file corpus: enumerate, run, verify, bisect failures, resume."
authors = [
    { name = "Infinite Room Labs", email = "wes@infiniteroomlabs.com" }
]
requires-python = ">=3.12"
dependencies = [
    "typer>=0.12",
]

[project.scripts]
dredge = "dredge.cli:app"

[build-system]
requires = ["uv_build>=0.10.3,<0.11.0"]
build-backend = "uv_build"

[tool.uv.build-backend]
module-root = "src"
module-name = "dredge"

[dependency-groups]
dev = ["pytest>=8"]
