[project]
name = "dredge"
version = "0.1.0"
description = "Coverage-guaranteed batch sweeps of an AI agent over a file corpus: enumerate, run, verify, bisect failures, resume."
authors = [
    { name = "Infinite Room Labs", email = "wes@infiniteroomlabs.com" }
]
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
requires-python = ">=3.12"
keywords = ["ai-agents", "cli", "orchestration", "coverage", "batch"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Operating System :: POSIX",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Utilities",
    "Typing :: Typed",
]
dependencies = [
    "typer>=0.12",
]

[project.urls]
Source = "https://github.com/InfiniteRoomLabs/dredge"
Issues = "https://github.com/InfiniteRoomLabs/dredge/issues"
Changelog = "https://github.com/InfiniteRoomLabs/dredge/blob/main/CHANGELOG.md"

[project.scripts]
dredge = "dredge.cli:app"

[build-system]
requires = ["uv_build>=0.10.3,<0.11.0"]
build-backend = "uv_build"

[tool.uv.build-backend]
module-root = "src"
module-name = "dredge"

[dependency-groups]
dev = [
    "pytest>=8",
    "pytest-cov>=6",
    "ruff>=0.14",
    "pyright>=1.1.400",
    "pre-commit>=4",
]

[tool.ruff]
target-version = "py312"
line-length = 120
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP", "PTH", "SIM", "RET", "PERF", "RUF"]

[tool.ruff.lint.per-file-ignores]
# Typer's Annotated option pattern requires function calls in defaults.
"src/dredge/cli.py" = ["B008"]

[tool.pyright]
pythonVersion = "3.12"
typeCheckingMode = "standard"
strict = ["src"]
include = ["src", "tests"]
venvPath = "."
venv = ".venv"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--strict-markers --strict-config"
filterwarnings = ["error"]

[tool.coverage.run]
branch = true
source = ["dredge"]

[tool.coverage.report]
fail_under = 90
show_missing = true
